# TheHorrorOfHaskell

./: .gitignore  README.md  hie.yaml  thehorrorofhaskell.cabal
app/: Config.hs  Enemy.hs  Main.hs  MapEditor.hs  MusicPlayer.hs  ParseMap.hs
app/maps/: map.json
mapeditor/: Main.hs
maps/: customMap.json  map.json
