cabal-version:      3.6
name:               thehorrorofhaskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             geff_k2
maintainer:         sluxx@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable mapeditor
  main-is: Main.hs

  other-modules:
    Config
    ParseMap

  build-depends:   
    base ^>=4.14.3.0
    , gloss
    , array
    , containers
    , text
    , gloss-algorithms
    , aeson
    , bytestring
    , directory
    , sdl2
    , sdl2-mixer
    , monad-control
    , matrix
  hs-source-dirs:  
    mapeditor
    app
  default-language: Haskell2010
    

executable thehorrorofhaskell
  main-is:          Main.hs

    -- Modules included in this executable, other than Main.
  other-modules:
    Config
    ParseMap
    Enemy
    ParseMap
--    MusicPlayer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
  build-depends:    
      base ^>=4.14.3.0
    , gloss
    , array
    , containers
    , text
    , gloss-algorithms
    , aeson
    , bytestring
    , directory
    , sdl2
    , sdl2-mixer
    , monad-control
    , matrix
    , fgl
    , lens
    , parallel
  hs-source-dirs:   app
  default-language: Haskell2010
